// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should ignore items without visibleName 1`] = `
<ul>
  <li
    className=""
    key="#button"
  >
    <Styled(Link)
      className=""
      href="#button"
    >
      Button
    </Styled(Link)>
  </li>
</ul>
`;

exports[`should render sections with nested components 1`] = `
<ul>
  <li
    className=""
    key="#button"
  >
    <Styled(Link)
      className=""
      href="#button"
    >
      Button
    </Styled(Link)>
  </li>
  <li
    className=""
    key="#input"
  >
    <Styled(Link)
      className=""
      href="#input"
    >
      Input
    </Styled(Link)>
  </li>
</ul>
`;

exports[`should set a parameter on link when useHashId is activated 1`] = `
<Styled(ComponentsList)
  classes={Object {}}
  items={
    Array [
      Object {
        "href": "blank#/Components?id=button",
        "name": "Button",
        "slug": "button",
        "visibleName": "Button",
      },
      Object {
        "href": "blank#/Components?id=input",
        "name": "Input",
        "slug": "input",
        "visibleName": "Input",
      },
    ]
  }
/>
`;

exports[`should set a sub route on link when useHashId is deactivated 1`] = `
<Styled(ComponentsList)
  classes={Object {}}
  items={
    Array [
      Object {
        "href": "blank#/Components/Button",
        "name": "Button",
        "slug": "button",
      },
      Object {
        "href": "blank#/Components/Input",
        "name": "Input",
        "slug": "input",
      },
    ]
  }
/>
`;

exports[`should set the correct href for items 1`] = `
<Styled(ComponentsList)
  classes={Object {}}
  items={
    Array [
      Object {
        "href": "blank#button",
        "name": "Button",
        "slug": "button",
        "visibleName": "Button",
      },
      Object {
        "href": "blank#input",
        "name": "Input",
        "slug": "input",
        "visibleName": "Input",
      },
    ]
  }
/>
`;
